--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "recharts": "^3.5.1",
     "swiper": "^11.0.5",
     "zustand": "^4.4.7"
   },
