--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.556.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
